--- a/src/style/style.css
+++ b/src/style/style.css
@@ -6,5 +6,15 @@
 }
 
 .bckbtn {
-    margin: 5%;
+    margin: 1%;
+    background: cadetblue;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
+}
+
+.backToHome {
+    display: flex;
+    justify-content: center;
+    margin: 1%;
 }
